[package]
name = "maze"
version = "0.1.2"
authors = ["Tomas Korcak <korczis@gmail.com>"]
description = "Maze Generator"
repository = "https://github.com/korczis/maze-rs"
readme = "README.md"
keywords = ["maze", "labyrinth", "maze-generator", "labyrinth-generator", "fun"]
license = "MIT"

[dependencies]
clap = "2.18.0"
css-color-parser = "0.1.1"
env_logger = "0.3.5"
hyper = "= 0.9.12"
image = "0.10.3"
imageproc = "0.6.0"
iron = "0.4.0"
log = "0.3.6"
rand="0.3.14"
router = "0.4.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
time = "0.1.35"
urlencoded = "0.4.1"

[lib]
name = "maze"
path = "src/lib.rs"

[[bin]]
name = "maze"
doc = false
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
