[package]
name = "maze"
version = "0.1.3"
authors = ["Tomas Korcak <korczis@gmail.com>"]
description = "Maze Generator"
repository = "https://github.com/korczis/maze-rs"
readme = "README.md"
keywords = ["maze", "labyrinth", "maze-generator", "labyrinth-generator", "fun"]
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
clap = "2.34.0"
css-color-parser = "0.1.2"
env_logger = "0.9.0"
hyper = "0.14.16"
image = "0.23.14"
imageproc = "0.22.0"
iron = "0.6.1"
log = "0.4.14"
rand= "0.8.4"
router = "0.6.0"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"
time = "0.3.5"
urlencoded = "0.6.0"

[lib]
name = "maze"
path = "src/lib.rs"

[[bin]]
name = "maze"
doc = false
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
